client/src/App.css
* {
	box-sizing: border-box;
}

html, body {
	height: 100vh;
	overflow: hidden;
	width: 100%;
}

body {
	background: url("/../images/chalkboardBackground.jpg") no-repeat center center fixed;
	background-size: cover;
}

h3 {
	padding-top: 0.5em;
	font-size: 1.2em;
}

h6 {
	color: #000;
	padding-bottom: 0.6em;
	margin: 0.5em;
}

.allNames {
	color: blue;
	margin: 0em;
	padding-left: 0.5em;
}

.app {
	height: 100vh;
	overflow: auto;
	width: 100%;
}

.clickable, .clickable:hover, ul li:hover {
	cursor: pointer;
}

.content-container {
	min-height: 100vh;
	position: relative;
	top: 64px;
	width: 100%;
}

.dashboard-content-row {
	margin: auto;
	max-width: 1080px;
	padding: 20px 0;
	width: 90%;
}

.loginContentRow, .registerContentRow {
	margin: 0;
	padding: 0;
}

.infoContainer {
	display: block;
	margin: auto;
	margin-top: 1.8em;
	max-width: 90%;
	border: 2px solid silver;
}

.info-div {
	max-height: 300px;
	overflow: hidden;
}

.infoInfoBox {
	border-top: 2px solid silver;
	height: 14em;
	background-color: #fff;
}

.infoTitle {
	text-align: center;
	background-color: #d00010;
	color: #fff;
	padding-bottom: 5px;
	padding-top: 5px;
}

.list-group-item {
	text-transform: uppercase;
	font-size: 0.8em;
}

.modal {
	margin-bottom: 80px;
	margin-top: 80px;
}

.modal-body {
	padding: 2em 2em;
}

.modal-dialog {
	margin-top: 0;
}

.modal-header {
	background-color: #0000FF;
}

.modal-title {
	padding-left: 0.7em;
	color: #fff;
}

#editIcon {
	cursor: pointer;
	height: 24px;
	padding: 5px;
	position: absolute;
	right: 0;
	top: -5px;
	width: 24px;
	z-index: 5;
}

#editIcon img {
	height: 100%;
	vertical-align: top;
	width: 100%;
}

#mainNavbar {
		background-color: #d00010;
		left: 0;
		min-height: 4em;
		padding: 0.5em;
		position: fixed;
		top: 0;
		width: 100%;
		z-index: 9;
}

#navTitle {
		text-decoration: none;
		color: #fff;
		font-size: 1.3em;
}

#navLogo {
		height: 2.3em;
		margin: 0em 1em;
		padding-left: 0em;
		width: auto;
}

#navLogoutLink {
	border-top: 1px solid gray;
}

#navDropdownMenu {
		margin-right: 1.5em;
		font-size: 1.3em;
}

#navbarDropdown {
		color: #fff;
}

#search-container {
	left: 0;
	position: fixed;
    top: 4em;
	width: 100%;
	z-index: 2;
}

